--- a/20250922/index.html
+++ b/20250922/index.html
@@ -175,7 +175,7 @@
                         <ul class="list-tight">
                           <li>윤석찬(AWS) → <i>생성형 AI 시대의 변화와 민첩성</i></li>
                           <li>박세준(타임와이즈) → <i>지속가능한 검색 전략의 미래</i></li>
-                          <li>김송주(고려대) → <i>Security by Design, 프로세스 구축의 중요성</i></li>
+                          <li>김승주(고려대) → <i>Security by Design, 프로세스 구축의 중요성</i></li>
                         </ul>
                         <p style="margin:8px 0 0 0;"><ins>👉 9월 23일(화) 오전 10시, 놓치지 마세요!</ins></p>
                       </div>
