--- a/20250922/index.html
+++ b/20250922/index.html
@@ -174,7 +174,7 @@
                         LG SW 개발자 컨퍼런스 <strong>Day 1 키노트 🎤</strong>
                         <ul class="list-tight">
                           <li>윤석찬(AWS) → <i>생성형 AI 시대의 변화와 민첩성</i></li>
-                          <li>박세준(티오리) → <i>AI에게 해킹을 가르치</i></li>
+                          <li>박세준(티오리) → <i>AI에게 해킹을 가르치다.</i></li>
                           <li>김승주(고려대) → <i>Security by Design, 프로세스 구축의 중요성</i></li>
                         </ul>
                         <p style="margin:8px 0 0 0;"><ins>👉 9월 23일(화) 오전 10시, 놓치지 마세요!</ins></p>
