--- a/20250922/index.html
+++ b/20250922/index.html
@@ -215,6 +215,22 @@
                 </table>
               </td>
             </tr>
+<!-- CARD: 쏘칼툰 휴재 안내 -->
+<tr>
+  <td align="center" style="padding:0 12px 20px 12px;">
+    <table role="presentation" cellpadding="0" cellspacing="0" width="100%" 
+           style="background-color:#FFF3E6; border:1px solid #FFD6BA; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,0.05);">
+      <tr>
+        <td align="center" style="padding:16px 20px;">
+          <div style="font-weight:600; font-size:14px; color:#E86A33; line-height:1.6;">
+            📢 쏘칼툰은 <strong>LG SW PMC 진행</strong>으로 잠시 쉬어갑니다.<br>
+            👉 다음 호에서 더 알찬 이야기로 만나요!
+          </div>
+        </td>
+      </tr>
+    </table>
+  </td>
+</tr>
 
             <!-- footer -->
             <tr>
