--- a/20251001/index.html
+++ b/20251001/index.html
@@ -164,10 +164,10 @@
 <p>2025년을 뜨겁게 달군 AI Tool 300선부터 뉴스레터 자동화,  
 PyQt5로 구현하는 머신러닝 앱까지 한눈에 만나보세요!</p>
       <ul class="list-tight" style="font-size:13px;">
-        <li>CSO 정의석 <a href="http://collab.lge.com/main/x/iWomxg" target="_blank" rel="noopener noreferrer">(꿀툴) 2025년도 핫🔥했던 AI Tool 다 정리해봅니다 - 300선</a></li>
-        <li>CSO 오형신<a href="https://youtu.be/CsfJLSjw57A" target="_blank" rel="noopener noreferrer">EP2-8_파이썬활용 뉴스레터 자동화</a></li>
-        <li>CSO 이명희<a href=https://youtu.be/DaeyZr-ZjFA" target="_blank" rel="noopener noreferrer">PyQt5로 RandomForestClassifier App 만들기 1~3</a></li>
-        <li>CSO 이명희<a href="https://youtu.be/K8nZWeCb8Ok" target="_blank" rel="noopener noreferrer">PyQt5로 RandomForestClassifier feature importance App 만들기</a></li>
+        <li>CSO 정의석👉<a href="http://collab.lge.com/main/x/iWomxg" target="_blank" rel="noopener noreferrer">(꿀툴) 2025년도 핫🔥했던 AI Tool 다 정리해봅니다 - 300선</a></li>
+        <li>CSO 오형신👉<a href="https://youtu.be/CsfJLSjw57A" target="_blank" rel="noopener noreferrer">EP2-8_파이썬활용 뉴스레터 자동화</a></li>
+        <li>CSO 이명희👉<a href=https://youtu.be/DaeyZr-ZjFA" target="_blank" rel="noopener noreferrer">PyQt5로 RandomForestClassifier App 만들기 1~3</a></li>
+        <li>CSO 이명희👉<a href="https://youtu.be/K8nZWeCb8Ok" target="_blank" rel="noopener noreferrer">PyQt5로 RandomForestClassifier feature importance App 만들기</a></li>
       </ul>
 
       <!-- 버튼 : 러크TV 전체 보기 -->
