--- a/20251001/index.html
+++ b/20251001/index.html
@@ -327,7 +327,7 @@ PyQt5로 구현하는 머신러닝 앱까지 한눈에 만나보세요!</p>
       </v:roundrect>
       <![endif]-->
       <!--[if !mso]><!-- -->
-      <a class="btn" href="http://collab.lge.com/main/pages/viewpage.action?pageId=3288218356" target="_blank" rel="noopener noreferrer">이벤트 명단 확인하기</a>
+      <a class="btn" href="http://collab.lge.com/main/pages/viewpage.action?pageId=3288218356" target="_blank" rel="noopener noreferrer">이벤트 당첨자 확인하기</a>
       <!--<![endif]-->
     </section>
 
