--- a/20251001/index.html
+++ b/20251001/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>SW College Letter VOL.27 — 추석 특집</title>
+  <title>SW College Letter VOL.28 </title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root{
@@ -125,7 +125,7 @@
         <div class="moon" aria-hidden="true"></div>
         <div class="title">한가위 보름달처럼 풍성한 배움 🌕</div>
       </div>
-      <div class="vol">VOL.27 | 2025 추석 특집호</div>
+      <div class="vol">VOL.28 | 2025 추석 특집호</div>
     </div>
 
     <!-- 헤더 -->
