--- a/pm/index.html
+++ b/pm/index.html
@@ -159,7 +159,7 @@
         <div class="card-icon">🎯</div>
         <h3>PM 역량인증</h3>
         <p>SW Project Management 핵심 역량을 스스로 검증하고,<br>진짜 ‘PM의 기본기’를 완성하세요.</p>
-        <a href="#" class="btn-start">체험 시작 ▶</a>
+        <a href="https://pingjueuna.github.io/socalletter/pm/pmtest.html" class="btn-start">체험 시작 ▶</a>
       </div>
 
       <div class="card">
