--- a/pm/pmcintro.html
+++ b/pm/pmcintro.html
@@ -56,11 +56,11 @@ footer{text-align:center;color:#6b7280;border-top:1px solid #eceff3;padding:34px
   </div>
 
   <nav class="tabs">
-    <a href="https://pingjueuna.github.io/socalletter/pm/pmcintro.html" class="tab active">소개</a>
-    <a href="https://pingjueuna.github.io/socalletter/pm/pmcmission1.html" class="tab">예선전 - 미션 1</a>
-    <a href="mission2.html" class="tab">예선전 - 미션 2</a>
-    <a href="final.html" class="tab">본선</a>
-  </nav>
+  <a href="pmcintro.html" class="tab">소개</a>
+  <a href="pmcmission1.html" class="tab">예선전 - 미션 1</a>
+  <a href="pmcmission2.html" class="tab">예선전 - 미션 2</a>
+  <a href="pmcfinal.html" class="tab">본선</a>
+</nav>
 
   <section class="hero"></section>
 
