--- a/pm/pmtest.html
+++ b/pm/pmtest.html
@@ -211,7 +211,7 @@
         launchConfetti();
       } else {
         resultEl.style.color = 'var(--primary)';
-        resultEl.textContent = `총 ${correct}문항 정답입니다. 다시 도전해보세요!`;
+        resultEl.textContent = `총 ${correct}문항 정답입니다.`;
         window.scrollTo({ top: 0, behavior: 'smooth' });
       }
     });
