--- a/pm/pmcintro.html
+++ b/pm/pmcintro.html
@@ -68,16 +68,16 @@ footer{text-align:center;color:#6b7280;border-top:1px solid #eceff3;padding:34px
     <h2>Competition Steps</h2>
     <div class="cards">
       <div class="card">
-        <h3>미션 1️⃣ 프로젝트 관리 '데몬 리포트' 제출</h3>
+        <h3>미션 1️⃣ <br>프로젝트 관리 '데몬 리포트' 제출</h3>
         <p>실제 경험했던 현업 프로젝트의 문제(데몬) 상황을 정의하여 글로벌 표준 프로젝트 관리 방법론 기반의 데몬 리포트(개선안)를 제안합니다.</p>
       </div>
       <div class="card">
-        <h3>미션 2️⃣ 프로젝트 관리 데몬 '방 탈출 게임'</h3>
+        <h3>미션 2️⃣ <br>프로젝트 관리 데몬 '방 탈출 게임'</h3>
         <p>프로젝트 관리 혼문을 사수하기 위해 다음 총 5개의 관문을 통과해야 합니다.
 각 방의 문제풀이를 완료하여 다음 관문 입장 key를 획득합니다.</p>
       </div>
       <div class="card">
-        <h3>본선 🏆 프로젝트 관리 Case Study</h3>
+        <h3>본선 🏆 <br>프로젝트 관리 Case Study</h3>
         <p>모의 프로젝트 상황 시나리오에 대한 '프로젝트 관리 Case Study' 수행:
 - 프로젝트 문제 정의, 원인 분석, 대응 방안, 장기적 예방안 제안
 - 발표 & 질의응답 진행</p>
