--- a/pm/pmcmission1.html
+++ b/pm/pmcmission1.html
@@ -29,17 +29,18 @@ ul{padding-left:20px;}
 </style>
 </head>
 <body>
-  <div class="navbar">
-    <div class="navbar-inner">
-      <div class="logo">LG SW PM Competition 2025</div>
-      <div class="tabs">
-        <div class="tab active" onclick="navigate('mission1.html')">예선전 - 미션 1</div>
-        <div class="tab" onclick="navigate('mission2.html')">예선전 - 미션 2</div>
-        <div class="tab" onclick="navigate('final.html')">본선</div>
-      </div>
+ <div class="navbar">
+  <div class="navbar-inner">
+    <a href="https://pingjueuna.github.io/socalletter/pm/pmcintro.html" class="logo">
+      LG SW PM Competition 2025
+    </a>
+    <div class="tabs">
+      <a href="https://pingjueuna.github.io/socalletter/pm/pmcmission1.html" class="tab active">예선전 - 미션 1</a>
+      <a href="https://pingjueuna.github.io/socalletter/pm/pmcmission2.html" class="tab">예선전 - 미션 2</a>
+      <a href="https://pingjueuna.github.io/socalletter/pm/pmcfinal.html" class="tab">본선</a>
     </div>
   </div>
-
+</div>
 <header>
 <h1>예선 미션 1. 프로젝트 관리 ‘데몬 리포트’ 제출</h1>
 <p>여러분을 프로젝트 데몬 헌터로 임명합니다 🔥</p>
