--- a/pm/pmcmission2.html
+++ b/pm/pmcmission2.html
@@ -101,7 +101,9 @@ footer{text-align:center; color:#6b7280; font-size:14px; padding:26px 0 20px}
   <!-- 맨 위: 브랜드 + 탭 -->
   <div class="topbar">
     <div class="topbar-inner">
-      <div class="brand">LG SW PM Competition 2025</div>
+      <a href="https://pingjueuna.github.io/socalletter/pm/pmcintro.html" class="logo">
+      LG SW PM Competition 2025
+    </a>
       <nav class="tabs">
         <a href="pmcintro.html" class="tab">소개</a>
         <a href="pmcmission1.html" class="tab">예선전 - 미션 1</a>
