--- a/pm/pmcmission2.html
+++ b/pm/pmcmission2.html
@@ -148,7 +148,7 @@ footer{text-align:center; color:#6b7280; font-size:14px; padding:26px 0 20px}
         <div class="opt"><input id="g1a4" type="radio" name="g1" value="4"><label for="g1a4">이해관계자 참여 관리 (Stakeholder Engagement Management)</label></div>
       </div>
       <div class="actions"><button class="btn" id="submitG1">Gate 1 제출</button></div>
-      <div class="hint">정답 해설(정답 후 노출): 잠재 위험(라이선스 검증 지연·장비 충돌 등) 선제 식별·대응 계획 수립 → <b>리스크 관리</b>.</div>
+      <div class="hint">정답 해설: 잠재 위험(라이선스 검증 지연·장비 충돌 등) 선제 식별·대응 계획 수립 → <b>리스크 관리</b>.</div>
     </section>
 
     <!-- GATE 2 -->
@@ -162,7 +162,7 @@ footer{text-align:center; color:#6b7280; font-size:14px; padding:26px 0 20px}
         <div class="opt"><input id="g2a4" type="radio" name="g2" value="4"><label for="g2a4">④ 비개발 업무 선반영으로 잔여 작업 많아 보일 뿐, 일정 위험과 무관</label></div>
       </div>
       <div class="actions"><button class="btn" id="submitG2">Gate 2 제출</button></div>
-      <div class="hint">정답 해설(정답 후 노출): Burndown 악화 + Gantt 지연 동시 발생은 구조적 일정지연 신호 → <b>③</b>.</div>
+      <div class="hint">정답 해설: Burndown 악화 + Gantt 지연 동시 발생은 구조적 일정지연 신호 → <b>③</b>.</div>
     </section>
 
     <!-- GATE 3 -->
@@ -176,7 +176,7 @@ footer{text-align:center; color:#6b7280; font-size:14px; padding:26px 0 20px}
         <li draggable="true" data-id="4"><span class="badge">4</span>승인된 변경을 일정/산출물에 반영하고 이해관계자 공지</li>
       </ol>
       <div class="actions"><button class="btn" id="submitG3">최종 제출</button></div>
-      <div class="hint">정답 해설(정답 후 노출): <b>3 → 1 → 2 → 4</b> (문서화 → 영향도 분석 → CCB 승인 → 반영·공지)</div>
+      <div class="hint">정답 해설: <b>3 → 1 → 2 → 4</b> (문서화 → 영향도 분석 → CCB 승인 → 반영·공지)</div>
     </section>
   </main>
 
