--- a/pm/pmcmission2.html
+++ b/pm/pmcmission2.html
@@ -191,7 +191,7 @@ footer{text-align:center; color:#6b7280; font-size:14px; padding:26px 0 20px}
   <div id="success" class="modal">
     <div class="modal-card">
       <h3 class="ok">🎉 모든 관문 통과! 데몬 헌터스, 미션 클리어</h3>
-      <p class="sub">세 문제 모두 정답입니다. 다음 스테이지로 이동하세요.</p>
+      <p class="sub">세 문제 모두 정답입니다. PM의 정석 획득!🎁 </p>
       <button class="btn" id="againSuccess">다시 도전</button>
       <button class="btn" id="goHome" style="background:#111">🏠 index.html로 돌아가기</button>
     </div>
