--- a/pm/pmcmission2.html
+++ b/pm/pmcmission2.html
@@ -199,7 +199,7 @@ footer{text-align:center; color:#6b7280; font-size:14px; padding:26px 0 20px}
 
   <div id="fail" class="modal">
     <div class="modal-card">
-      <h3 class="fail">❌ 탈락… 방의 함정에 걸렸습니다</h3>
+      <h3 class="fail">❌ 탈락… 데몬의 함정에 걸렸습니다</h3>
       <p class="sub">오답 1회로 미션 실패. 다시 도전해보시겠어요?</p>
       <button class="btn" id="againFail">다시 도전</button>
       <button class="btn" id="goHome2" style="background:#111">🏠 index.html로 돌아가기</button>
