--- a/pm/index.html
+++ b/pm/index.html
@@ -163,7 +163,7 @@
       </div>
 
       <div class="card">
-        <div class="card-icon">👥</div>
+        <div class="card-icon">👨‍👩‍👧</div>
         <h3>PMC 2025</h3>
         <p>팀워크와 전략으로 승부하는 PM Competition!<br>함께 성장하고, 함께 즐기는 진짜 PM 경험.</p>
         <a href="https://pingjueuna.github.io/socalletter/pm/pmcintro.html" class="btn-start">체험 시작 ▶</a>
