--- a/pm/pmtest.html
+++ b/pm/pmtest.html
@@ -211,7 +211,9 @@
         launchConfetti();
       } else {
         resultEl.style.color = 'var(--primary)';
-        resultEl.textContent = `총 ${correct}문항 정답입니다.`;
+        resultEl.textContent = `총 ${correct}문항 정답입니다.  <br>문제1. 이 접근법은 개별 지표별 관리 계획들 간의 상호작용과 의존성을 체계적으로 분석하고 이해하는 데 중점을 둡니다. 이를 통해 PM은 계획 간의 불일치나 간섭을 효과적으로 식별하고, 통합적인 조정 전략을 수립할 수 있습니다. 이는 통합관리의 핵심 요소로, 프로젝트의 전반적인 일관성과 효율성을 높이는 데 가장 적합한 방법입니다.
+    <br>문제2. 요구사항의불확실성은애자일환경에서가장우선적인리스크요인으로간주되며, 반복주기마다명확화되지않을경우전체계획및결과물의품질에영향을줄수있음.Waterfall 환경에서도기준선중범위기준선이가장먼저수립되어야, 다른기준선을수립할수있음
+    <br>문제3. Influence는'비공식작용력'이며관계네트워크기반으로정의된다. 나머지는Urgency, Authority 개념혼합에해당`;
         window.scrollTo({ top: 0, behavior: 'smooth' });
       }
     });
@@ -228,9 +230,6 @@
 
   <footer>
     ⓒ LG Electronics · Software College — PM 역량은 습관입니다.
-    <br>문제1. 이 접근법은 개별 지표별 관리 계획들 간의 상호작용과 의존성을 체계적으로 분석하고 이해하는 데 중점을 둡니다. 이를 통해 PM은 계획 간의 불일치나 간섭을 효과적으로 식별하고, 통합적인 조정 전략을 수립할 수 있습니다. 이는 통합관리의 핵심 요소로, 프로젝트의 전반적인 일관성과 효율성을 높이는 데 가장 적합한 방법입니다.
-    <br>문제2. 요구사항의불확실성은애자일환경에서가장우선적인리스크요인으로간주되며, 반복주기마다명확화되지않을경우전체계획및결과물의품질에영향을줄수있음.Waterfall 환경에서도기준선중범위기준선이가장먼저수립되어야, 다른기준선을수립할수있음
-    <br>문제3. Influence는'비공식작용력'이며관계네트워크기반으로정의된다. 나머지는Urgency, Authority 개념혼합에해당
   </footer>
 </body>
 </html>
