--- a/pm/pmcmission2.html
+++ b/pm/pmcmission2.html
@@ -193,7 +193,7 @@ footer{text-align:center; color:#6b7280; font-size:14px; padding:26px 0 20px}
       <h3 class="ok">🎉 모든 관문 통과! 데몬 헌터스, 미션 클리어</h3>
       <p class="sub">세 문제 모두 정답입니다. PM의 정석 획득!🎁 </p>
       <button class="btn" id="againSuccess">다시 도전</button>
-      <button class="btn" id="goHome" style="background:#111">🏠 index.html로 돌아가기</button>
+      <button class="btn" id="goHome" style="background:#111">🏠 Home으로 돌아가기</button>
     </div>
   </div>
 
@@ -202,7 +202,7 @@ footer{text-align:center; color:#6b7280; font-size:14px; padding:26px 0 20px}
       <h3 class="fail">❌ 탈락… 데몬의 함정에 걸렸습니다</h3>
       <p class="sub">오답 1회로 미션 실패. 다시 도전해보시겠어요?</p>
       <button class="btn" id="againFail">다시 도전</button>
-      <button class="btn" id="goHome2" style="background:#111">🏠 index.html로 돌아가기</button>
+      <button class="btn" id="goHome2" style="background:#111">🏠 Home으로 돌아가기</button>
     </div>
   </div>
 
