--- a/pm/pmcmission2.html
+++ b/pm/pmcmission2.html
@@ -158,7 +158,7 @@ footer{text-align:center; color:#6b7280; font-size:14px; padding:26px 0 20px}
       <div class="options">
         <div class="opt"><input id="g2a1" type="radio" name="g2" value="1"><label for="g2a1">① QA는 후반 집중이므로 초기 지연·상승은 정상 범위</label></div>
         <div class="opt"><input id="g2a2" type="radio" name="g2" value="2"><label for="g2a2">② Burn-down 상승은 기술부하 반영 가능, QA 지연과 직접 연결 아님</label></div>
-        <div class="opt"><input id="g2a3" type="radio" name="g2" value="3"><label for="g2a3">③ 개발 진척 저조 & QA 미착수 → 릴리즈 일정 <b>위험 신호</b></label></div>
+        <div class="opt"><input id="g2a3" type="radio" name="g2" value="3"><label for="g2a3">③ 개발 진척 저조 & QA 미착수 → 릴리즈 일정 위험 신호</b></label></div>
         <div class="opt"><input id="g2a4" type="radio" name="g2" value="4"><label for="g2a4">④ 비개발 업무 선반영으로 잔여 작업 많아 보일 뿐, 일정 위험과 무관</label></div>
       </div>
       <div class="actions"><button class="btn" id="submitG2">Gate 2 제출</button></div>
