--- a/pm/pmcmission2.html
+++ b/pm/pmcmission2.html
@@ -105,7 +105,8 @@ footer{text-align:center; color:#6b7280; font-size:14px; padding:26px 0 20px}
       LG SW PM Competition 2025
     </a>
       <nav class="tabs">
-        <a href="pmcintro.html" class="tab">소개</a>
+        <a href="index.html" class="tab">Home</a>
+        <a href="pmcintro.html" class="tab">PMC 소개</a>
         <a href="pmcmission1.html" class="tab">예선전 - 미션 1</a>
         <a href="pmcmission2.html" class="tab active">예선전 - 미션 2</a>
         <a href="pmcfinal.html" class="tab">본선</a>
