--- a/pm/pmcmission1.html
+++ b/pm/pmcmission1.html
@@ -35,6 +35,8 @@ ul{padding-left:20px;}
       LG SW PM Competition 2025
     </a>
     <div class="tabs">
+      <a href="index.html" class="tab">Home</a>
+      <a href="pmcintro.html" class="tab">PMC 소개</a>
       <a href="https://pingjueuna.github.io/socalletter/pm/pmcmission1.html" class="tab active">예선전 - 미션 1</a>
       <a href="https://pingjueuna.github.io/socalletter/pm/pmcmission2.html" class="tab">예선전 - 미션 2</a>
       <a href="https://pingjueuna.github.io/socalletter/pm/pmcfinal.html" class="tab">본선</a>
