--- a/pm/pmcmission2.html
+++ b/pm/pmcmission2.html
@@ -343,8 +343,8 @@ function resetAll(){
 }
 document.getElementById('againSuccess').addEventListener('click', resetAll);
 document.getElementById('againFail').addEventListener('click', resetAll);
-document.getElementById('goHome').addEventListener('click', ()=> location.href='pmtest.html');
-document.getElementById('goHome2').addEventListener('click', ()=> location.href='pmtest.html');
+document.getElementById('goHome').addEventListener('click', ()=> location.href='index.html');
+document.getElementById('goHome2').addEventListener('click', ()=> location.href='index.html');
 
 /* init */
 updateBar();
