--- a/pm/pmcmission2.html
+++ b/pm/pmcmission2.html
@@ -194,7 +194,7 @@ footer{text-align:center; color:#6b7280; font-size:14px; padding:26px 0 20px}
       <h3 class="ok">🎉 모든 관문 통과! 데몬 헌터스, 미션 클리어</h3>
       <p class="sub">세 문제 모두 정답입니다. PM의 정석 획득!🎁 </p>
       <button class="btn" id="againSuccess">다시 도전</button>
-      <button class="btn" id="goHome" style="background:#111">🏠 Home으로 돌아가기</button>
+      <button class="btn" id="goHome" style="background:#111">본선 진출하기</button>
     </div>
   </div>
 
@@ -343,7 +343,7 @@ function resetAll(){
 }
 document.getElementById('againSuccess').addEventListener('click', resetAll);
 document.getElementById('againFail').addEventListener('click', resetAll);
-document.getElementById('goHome').addEventListener('click', ()=> location.href='index.html');
+document.getElementById('goHome').addEventListener('click', ()=> location.href='pmcfinal.html');
 document.getElementById('goHome2').addEventListener('click', ()=> location.href='index.html');
 
 /* init */
