--- a/pm/pmcfinal.html
+++ b/pm/pmcfinal.html
@@ -79,9 +79,19 @@ footer{text-align:center; color:#6b7280; font-size:14px; padding:34px 0 26px}
 
   <main class="wrap">
 
+      <!-- 2026 홍보 배너 -->
+    <section class="section promo">
+      <h3>LG SW PM Competition 2026 · 사전 안내</h3>
+      <p>
+        내년엔 <strong>우리 SW센터</strong>가 대거 참가해서 <strong>유플러스의 연승</strong>을 막아주세요 😄 26년에 LG PMC 참석해주실꺼죠?! <br><br>
+        LG SW PM Competition 2026에서는 <strong>LG 자매사 간 치열한 경연의 장</strong>이 될 예정이며,<br>
+        <strong>우승팀에게는 북미 PIM 글로벌 컨퍼런스 티켓</strong>이 제공됩니다. 많은 참석 부탁드립니다!
+      </p>
+    </section>
+    
     <!-- 문제 영상 -->
     <section class="section">
-      <h2>🎬 본선 문제 영상 (페이지 내 재생)</h2>
+      <h2>🎬 본선 문제 영상 (문제 분석) </h2>
       <div class="video-wrap">
         <iframe
           src="https://www.youtube.com/embed/Hm13qr-_0yI?list=PLgqm0A83muLMzGn4EAgYLZWjAkywtZVz4&rel=0&modestbranding=1&playsinline=1"
@@ -95,10 +105,10 @@ footer{text-align:center; color:#6b7280; font-size:14px; padding:34px 0 26px}
 
     <!-- 본선 진출팀 발표 모음 -->
     <section class="section">
-      <h2>🏁 본선 진출팀 발표 모음</h2>
+      <h2>🏁 본선 진출팀 발표 모음 : 우승팀을 분석해보자! </h2>
       <p style="margin-bottom:20px; color:#374151">
         본선 무대에 오른 팀들의 발표 영상을 시청해보세요.<br>
-        본선에 진출하신 여러분 축하드려요👍, <strong>SW College 채널 구독과 좋아요 ❤️</strong> 누르면 굿즈를 드립니다 🎁
+       <strong>SW College 채널 구독과 좋아요 ❤️</strong> 누르면 굿즈를 드립니다 🎁
       </p>
 
       <div class="cards" style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap:18px;">
@@ -160,15 +170,7 @@ footer{text-align:center; color:#6b7280; font-size:14px; padding:34px 0 26px}
       </p>
     </section>
 
-    <!-- 2026 홍보 배너 -->
-    <section class="section promo">
-      <h3>LG SW PM Competition 2026 · 사전 안내</h3>
-      <p>
-        내년엔 <strong>우리 SW센터</strong>가 대거 참가해서 <strong>유플러스의 연승</strong>을 막아주세요 😄 많은 참석 부탁드립니다!<br><br>
-        LG SW PM Competition 2026에서는 <strong>LG 자매사 간 치열한 경연의 장</strong>이 될 예정이며,<br>
-        <strong>우승팀에게는 북미 PIM 글로벌 컨퍼런스 티켓</strong>이 제공됩니다. 많은 참석 부탁드립니다!
-      </p>
-    </section>
+  
   </main>
 
   <footer>ⓒ LG Electronics · Software Center</footer>
