--- a/pm/pmcmission2.html
+++ b/pm/pmcmission2.html
@@ -137,9 +137,7 @@ footer{text-align:center; color:#6b7280; font-size:14px; padding:26px 0 20px}
       </div>
       <h2>문제 1. 다음 대화를 듣고, PM의 핵심 관리 역량을 고르시오.</h2>
       <div class="audio-box">
-        <input id="audioFile" type="file" accept="audio/*">
-        <button class="btn secondary" id="playAudio">업로드 음원 재생</button>
-        <audio id="player" controls style="display:none"></audio>
+      <audio id="player" src="https://pingjueuna.github.io/socalletter/pm/Gate1_Q2.mp3" controls preload="metadata"></audio>
       </div>
       <div class="q">위 대화에서 PM이 보여준 가장 핵심적인 관리 역량은 무엇인가요?</div>
       <div class="options">
