--- a/pm/pmcmission2.html
+++ b/pm/pmcmission2.html
@@ -66,7 +66,7 @@ body{
 .btn{appearance:none; border:none; background:var(--primary); color:#fff; font-weight:900; padding:12px 18px; border-radius:999px; cursor:pointer; box-shadow:0 10px 28px rgba(184,0,0,.18); transition:transform .08s ease, background .2s ease}
 .btn.secondary{background:#111}
 .btn:active{transform:translateY(1px)}
-.hint{color:#374151; background:#fff; border:1px dashed #e5e7eb; border-radius:12px; padding:10px 12px; margin-top:10px}
+.hint{display:none; color:#374151; background:#fff; border:1px dashed #e5e7eb; border-radius:12px; padding:10px 12px; margin-top:10px}
 
 /* audio upload */
 .audio-box{display:flex; gap:10px; align-items:center; background:#fff; border:1px dashed #e5e7eb; padding:10px 12px; border-radius:12px; margin:10px 0}
