--- a/20260212/index.html
+++ b/20260212/index.html
@@ -251,7 +251,7 @@
     </tbody>
   </table>
 
-  <a class="btn" href="#" target="_blank" rel="noreferrer">교육 신청하기</a>
+  <a class="btn" href="https://lg.lms.sapsf.com/learning/user/personal/landOnPortalHome.do?fromSF=Y&fromDeepLink=null&fromDeepLink=true&pageID=&pageID=" target="_blank" rel="noreferrer">교육 신청하기</a>
 
   <div class="footer">LG전자 CTO SW센터 × AWS</div>
 </div>
