--- a/20260212/index.html
+++ b/20260212/index.html
@@ -219,7 +219,7 @@
       <li><strong>교육 기간:</strong> 3월 6일(금)</li>
       <li><strong>교육 시간:</strong> 오후 1시 입장 · 오후 1시 30분 ~ 4시 30분</li>
       <li><strong>교육 장소:</strong> LG 사이언스파크 지하1층 오디토리움</li>
-      <li><strong>신청:</strong> EP-Learning · AWS re:Cap</li>
+      <li><strong>신청:</strong> EP- HR - Learning · AWS re:Cap</li>
       <li><strong>참석만 해도 푸짐한 굿즈 제공!</strong> </li>
     </ul>
   </div>
